update to allow use of transport node in elastic update to use batching in response processing update to remove use of unpooled byte buffer and use resizable byte buffer. more testing